--- a/index.html
+++ b/index.html
@@ -76,6 +76,62 @@
     <svg class="wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1366 216.089"><defs><style>.cls-1{fill:#4a90d0;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M0,0V116.667S382.5,293.5,766.5,175.5,1366,48,1366,48V0Z"/></g></g></svg>    
 </header>
 <main>
+<section class="section_container showcase_container" id="package">
+    <div class="showcase_image">
+        <img src="assets/Slurry.jpg" alt="showcase">
+    </div>
+    <div class="showcase_content">
+        <h3>SLURRY ICE</h3>
+          <p>
+            The Chillplus Falling Film Chiller is designed to optimize
+your cooling processes by significantly reducing chilling
+time, which in turn boosts production efficiency and
+ensures a faster return on investment. It’s easy-to-clean
+and inspect design requires virtually no downtime,
+maintaining continuous operation. Utilizing advanced heat
+transfer technology, the Chillplus handles incoming fluid
+temperatures over 27°C, eliminating the need for a
+secondary heat exchanger and preventing freeze-up
+issues. The fully enclosed structure ensures a hygienic
+process by preventing product contamination. These
+features make the Chillplus ideal for industries like dairy
+and food processing, offering a reliable and efficient
+cooling solution.
+          </p>
+          <div class="showcase_btn"><a href="slurryice.html">
+            <button class="btn">
+                Learn More ...<span><i class="ri-arrow-right-circle-fill"></i></span>
+            </button></a>
+          </div>
+    </div>
+        <div class="showcase_image">
+        <img src="assets/Below paragraph.jpg" alt="showcase">
+    </div>
+    <div class="showcase_content">
+        <h3>FALLING FILM CHILLER</h3>
+          <p>
+            The Chillplus Falling Film Chiller is designed to optimize
+your cooling processes by significantly reducing chilling
+time, which in turn boosts production efficiency and
+ensures a faster return on investment. It’s easy-to-clean
+and inspect design requires virtually no downtime,
+maintaining continuous operation. Utilizing advanced heat
+transfer technology, the Chillplus handles incoming fluid
+temperatures over 27°C, eliminating the need for a
+secondary heat exchanger and preventing freeze-up
+issues. The fully enclosed structure ensures a hygienic
+process by preventing product contamination. These
+features make the Chillplus ideal for industries like dairy
+and food processing, offering a reliable and efficient
+cooling solution.
+          </p>
+          <div class="showcase_btn"><a href="fallinfilmchiller.html">
+            <button class="btn">
+                Learn More ...<span><i class="ri-arrow-right-circle-fill"></i></span>
+            </button></a>
+          </div>
+    </div>
+</section>
 <section class="section_container destination_container" id="about">
     <h2 class="section_header">WIDE RANGE OF APPLICATION FOR INSTANT COOLING</h2>
     <p class="section_description">
@@ -157,82 +213,41 @@ With Chillplus slurry ice excellence is guaranteed.</pre>
     </div>
     <div class="slogram_screen"></div>
 </div>
-<section class="section_container journey_container" id="solution">
-    <h2 class="section_header">EFFICIENT COOLING SOLUTIONS</h2>
 
-    </p>
-
-</section>
-<section class="section_container showcase_container" id="package">
-    <div class="showcase_image">
-        <img src="assets/Slurry.jpg" alt="showcase">
-    </div>
-    <div class="showcase_content">
-        <h3>SLURRY ICE</h3>
-          <p>
-            The Chillplus Falling Film Chiller is designed to optimize
-your cooling processes by significantly reducing chilling
-time, which in turn boosts production efficiency and
-ensures a faster return on investment. It’s easy-to-clean
-and inspect design requires virtually no downtime,
-maintaining continuous operation. Utilizing advanced heat
-transfer technology, the Chillplus handles incoming fluid
-temperatures over 27°C, eliminating the need for a
-secondary heat exchanger and preventing freeze-up
-issues. The fully enclosed structure ensures a hygienic
-process by preventing product contamination. These
-features make the Chillplus ideal for industries like dairy
-and food processing, offering a reliable and efficient
-cooling solution.
-          </p>
-          <div class="showcase_btn">
-            <button class="btn">
-                Learn More ...<span><i class="ri-arrow-right-circle-fill"></i></span>
-            </button>
-          </div>
-    </div>
-        <div class="showcase_image">
-        <img src="assets/Below paragraph.jpg" alt="showcase">
-    </div>
-    <div class="showcase_content">
-        <h3>FALLING FILM CHILLER</h3>
-          <p>
-            The Chillplus Falling Film Chiller is designed to optimize
-your cooling processes by significantly reducing chilling
-time, which in turn boosts production efficiency and
-ensures a faster return on investment. It’s easy-to-clean
-and inspect design requires virtually no downtime,
-maintaining continuous operation. Utilizing advanced heat
-transfer technology, the Chillplus handles incoming fluid
-temperatures over 27°C, eliminating the need for a
-secondary heat exchanger and preventing freeze-up
-issues. The fully enclosed structure ensures a hygienic
-process by preventing product contamination. These
-features make the Chillplus ideal for industries like dairy
-and food processing, offering a reliable and efficient
-cooling solution.
-          </p>
-          <div class="showcase_btn">
-            <button class="btn">
-                Learn More ...<span><i class="ri-arrow-right-circle-fill"></i></span>
-            </button>
-          </div>
-    </div>
-</section>
 <section class="section_container banner_container">
-    <div class="banner_card">
-        <img src="assets/cooling_efficiency.png" alt="pro">
-        <h4>Supreme Cooling Efficiency</h4>
-    </div>
-    <div class="banner_card">
-        <img src="assets/labour.png" alt="pro">
-        <h4>Optimize Labor Expenses</h4>
-    </div>
-    <div class="banner_card">
-        <img src="assets/Eco-friendly.png" alt="pro">
-        <h4>Environmental Sustainability</h4>
-    </div>
-
+        <div class="banner_card">
+        <div class="keyfeature_content"><img src="assets/cooling_efficiency.png" alt="pro">
+        <h4>Environmental Sustainability</h4></div>
+        <div><p>Chillplus offers rapid and uniform cooling,
+3 times faster than flake ice, without the risk
+of freezing your product.</p></div>
+</div>
+        <div class="banner_card">
+        <div class="keyfeature_content"><img src="assets/longer shelf life.png" alt="pro">
+        <h4>Longer Shelf Life</h4></div>
+        <div><p>Chillplus offers rapid and uniform cooling,
+Experience extended shelf life as Chillplus
+rapidly cools your product, preserving
+freshness for longer durations.</p></div>
+</div>
+        <div class="banner_card">
+        <div class="keyfeature_content"><img src="assets/labour.png" alt="pro">
+        <h4>Optimize Labor Expenses</h4></div>
+        <div><p>Chillplus systems are fully automated. Unlike
+traditionak flake ice, Chillplus is free flowing
+and pumpable, allowing for effortless
+distribution and handling. Say goodbye to
+shoveling or fork-lifting.</p></div>
+</div>
+        <div class="banner_card">
+        <div class="keyfeature_content"><img src="assets/Eco-friendly.png" alt="pro">
+        <h4>Environmental Sustainability</h4></div>
+        <div><p>Chillplus offers rapid and uniform cooling,
+Chillplus consumes less water and energy
+compared to traditional ice making methods,
+contributing to environmental conservation
+efforts and sustainability goals.</p></div>
+</div>
 </section>
 
 <section class="section_container discover_container">
